# rodentia

./: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  build_pyrodent.sh  circle.yml  reqirements.txt  requirements.txt  requirements_linux.txt  requirements_macosx.txt  setup.py
cmake_modules/: FindGLFW.cmake  FindPythonLibsHomebrew.cmake
doc/: python_api.md
doc/rodentia/test/: display_test.html  index.html  ma_display_test.html  process_test.html
docs/: core.html  index.html  rodentia_module.html
docs/image/: rodentia_logo.psd
docs/rodentia/test/: rodentia_module_test.html
docs/test/: index.html  process_test2.html  rodentia_module_test.html
examples/: random_agent.py  simple_environment.py
examples/01_seekavoid_arena/: main.py  seekavoid_environment.py
examples/02_nav_maze_static/: main.py  movie_writer.py  nav_maze_static_environment.py
examples/02_sample_envs/: main.py  movie_writer.py
examples/02_sample_envs/envs/: aai_environment.py  billiard_environment.py  nav_maze_static_environment.py  seekavoid_environment.py
examples/03_billiard/: billiard_environment.py  main.py
examples/03_texture_replace/: .gitignore
examples/04_texture_replace/: README.md  main.py
examples/05_animalai/: aai_environment.py  main.py  movie_writer.py
examples/data/: cylinder0.mtl  hat0.mtl  ice_lolly0.mtl  ramp0.mtl  suitcase0.mtl
examples/nav_maze_static/: main.py  nav_maze_static_environment.py
examples/seekavoid_arena/: main.py  seekavoid_environment.py
rodent/: __init__.py  core.py  display_test.py  process_test.py  rodent_module_test.py
rodent/test/: display_test.py  process_test.py  rodent_module_test.py  thread_test.py
rodenta/: __init__.py  core.py
rodenta/test/: display_test.py  process_test.py  rodent_module_test.py
rodentia/: __init__.py  core.py
rodentia/test/: display_test.py  ma_display_test.py  process_test.py  process_test2.py  rodentia_module_test.py
src/: CMakeLists.txt  Environment.cpp  Environment.h  Graphics.cpp  Graphics.h  Matrix4f.h  OffscreenRenderer.cpp  OffscreenRenderer.h  Renderer.cpp  Renderer.h  ScreenRenderer.cpp  ScreenRenderer.h  TrackBall.cpp  TrackBall.h  Vector4f.h  check.py  common.h  main.cpp  play.cpp  play.h  pyrodent.c  pyrodent.cpp  rigid.cpp  rigid.h  rodent_api.cpp  rodent_api.h  rodent_test.py
src/common/: glinc.h
src/env/: Action.h  CollisionShapeManager.cpp  CollisionShapeManager.h  DebugDrawer.cpp  DebugDrawer.h  Environment.cpp  Environment.h  EnvironmentObject.cpp  EnvironmentObject.h  RigidBodyComponent.cpp  RigidBodyComponent.h
src/geom/: BoundingBox.cpp  BoundingBox.h  Matrix3f.h  Matrix4f.h  Vector3f.h  Vector4f.h
src/importer/: ObjImporter.cpp  ObjImporter.h
src/play/: TrackBall.cpp  TrackBall.h  main.cpp  play.cpp  play.h
src/python/: display.py  pyrodent.cpp  rodent_module.cpp  rodent_test.py  rodenta_module.cpp  rodentia_module.cpp
src/render/: BoundingBox.cpp  BoundingBox.h  BufferObjects.h  Camera.cpp  Camera.h  CameraView.cpp  CameraView.h  CollisionMeshData.h  DebugDrawer.cpp  DebugDrawer.h  DepthFrameBuffer.cpp  DepthFrameBuffer.h  DiffuseShader.cpp  DiffuseShader.h  DrawComponent.cpp  DrawComponent.h  FrameBuffer.cpp  FrameBuffer.h  GLContext.cpp  GLContext.h  Image.cpp  Image.h  LSPSM.cpp  LSPSM.h  LineShader.cpp  LineShader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  MeshFace.cpp  MeshFace.h  MeshFaceData.cpp  MeshFaceData.h  MeshManager.cpp  MeshManager.h  OffscreenFrameBuffer.cpp  OffscreenFrameBuffer.h  (+24 more)
test/: CMakeLists.txt  bounding_box_test.cpp  camera_test.cpp  environment_object_info_test.cpp  matrix_test.cpp  mesh_face_data_test.cpp  mesh_manager_test.cpp
tmp/: .gitignore  CMakeLists.txt
tmp/src/: Camera.cpp  Camera.h  CheckShader.cpp  CheckShader.h  DiffuseShader.cpp  DiffuseShader.h  Image.cpp  Image.h  LineShader.cpp  Material.cpp  Material.h  Matrix3f.h  Matrix4f.h  Mesh.h  MeshFace.cpp  MeshFace.h  MeshFaceData.h  MeshManager.cpp  MeshManager.h  PNGDecoder.cpp  PNGDecoder.h  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Vector4f.h  main.cpp
